--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Manish Mishra</title>
+    <title>Chetan Dhami</title>
     <link rel="canonical" href="index-2.html">
     <meta name="url" content="index-2.html">
     <meta name="robots" content="index,follow,noodp">
     <meta name="googlebot" content="index,follow">
-    <meta property="og:title" content="Manish Mishra">
-    <meta property="og:site_name" content="Manish Mishra">
+    <meta property="og:title" content="Chetan Dhami">
+    <meta property="og:site_name" content="Chetan Dhami">
     <meta property="og:image" content="pp.jpg">
     <meta property="og:type" content="article">
     <meta property="og:url" content="index-2.html">
